acutally a comic this time

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://unpkg.com/98.css">
+    <!-- Google adSense test -->
     <script data-ad-client="ca-pub-8126971725731699" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
